# Imperative_programming_course_AGH

./: .gitignore  CMakeLists.txt  README.md
Section 1/: 01_exercise
Section 10/: 01_exercise
Section 2/: 01_exercise  02_exercise  02_exercise.c  03_exercise  03_exercise.c
Section 3/: 01_exercise  03_exercise
Section 4/: 01_exercise  03_exercise
Section 5/: 01_exercise  01_exercise.c  02_exercise  03_exercise  03_exercise.c
Section 6/: 01_exercise  02_exercise.c  03_exercise
Section 7/: 01_exercise.c  02_exercise  02_exercise.c
Section 8/: 01_exercise  02_exercise  03_exercise  03_exercise.c
Section 9/: 01_exercise  01_exercise.c  03_exercise
Section_01/: 01_exercise.c  02_exercise  02_exercise.c  03_exercise  03_exercise.c
Section_02/: 01_exercise.c
Section_03/: 01_exercise.c  02_exercise  02_exercise.c  03_exercise.c
Section_04/: 01_exercise.c  02_exercise  02_exercise.c  03_exercise.c
Section_05/: 01_exercise  02_exercise.c  03_exercise
Section_06/: 01_exercise.c  02_exercise  03_exercise.c
Section_07/: 01_exercise  03_exercise  03_exercise.c
Section_08/: 01_exercise.c  02_exercise.c
Section_09/: 02_exercise  02_exercise.c  03_exercise.c
Section_10/: 01_exercise.c  02_exercise  02_exercise.c  03_exercise  03_exercise.c
Section_11/: 01_exercise  01_exercise.c  02_exercise  02_exercise.c  03_exercise  03_exercise.c
