cmake_minimum_required(VERSION 3.19)
project(PI_exercises_solutions C)
link_libraries(m)
set(CMAKE_C_STANDARD 11)
add_executable(PI_exercises_solution_01_1 "Section_01/01_exercise.c")
add_executable(PI_exercises_solution_01_2 "Section_01/02_exercise.c")
add_executable(PI_exercises_solution_01_3 "Section_01/03_exercise.c")
add_executable(PI_exercises_solution_02_1 "Section_02/01_exercise.c")
add_executable(PI_exercises_solution_02_2 "Section_02/02_exercise.c")
add_executable(PI_exercises_solution_02_3 "Section_02/03_exercise.c")
add_executable(PI_exercises_solution_03_1 "Section_03/01_exercise.c")
add_executable(PI_exercises_solution_03_2 "Section_03/02_exercise.c")
add_executable(PI_exercises_solution_03_3 "Section_03/03_exercise.c")
add_executable(PI_exercises_solution_04_1 "Section_04/01_exercise.c")
add_executable(PI_exercises_solution_04_2 "Section_04/02_exercise.c")
add_executable(PI_exercises_solution_04_3 "Section_04/03_exercise.c")
add_executable(PI_exercises_solution_05_1 "Section_05/01_exercise.c")
add_executable(PI_exercises_solution_05_2 "Section_05/02_exercise.c")
add_executable(PI_exercises_solution_05_3 "Section_05/03_exercise.c")
add_executable(PI_exercises_solution_06_1 "Section_06/01_exercise.c")
add_executable(PI_exercises_solution_06_2 "Section_06/02_exercise.c")
add_executable(PI_exercises_solution_06_3 "Section_06/03_exercise.c")
add_executable(PI_exercises_solution_07_1 "Section_07/01_exercise.c")
add_executable(PI_exercises_solution_07_2 "Section_07/02_exercise.c")
add_executable(PI_exercises_solution_07_3 "Section_07/03_exercise.c")
add_executable(PI_exercises_solution_08_1 "Section_08/01_exercise.c")
add_executable(PI_exercises_solution_08_2 "Section_08/02_exercise.c")
add_executable(PI_exercises_solution_08_3 "Section_08/03_exercise.c")
add_executable(PI_exercises_solution_09_1 "Section_09/01_exercise.c")
add_executable(PI_exercises_solution_09_2 "Section_09/02_exercise.c")
add_executable(PI_exercises_solution_09_3 "Section_09/03_exercise.c")
add_executable(PI_exercises_solution_10_1 "Section_10/01_exercise.c")
add_executable(PI_exercises_solution_10_2 "Section_10/02_exercise.c")
add_executable(PI_exercises_solution_10_3 "Section_10/03_exercise.c")
add_executable(PI_exercises_solution_11_1 "Section_11/01_exercise.c")
add_executable(PI_exercises_solution_11_2 "Section_11/02_exercise.c")
add_executable(PI_exercises_solution_11_3 "Section_11/03_exercise.c")